add-ons/overlays/educates-with-argocd-ingress/argocd-server-service-patch.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: argocd-server
  annotations:
    projectcontour.io/upstream-protocol.h2c: "https,443"
