add-ons/overlays/educates-with-argocd-ingress/argocd-server-grpc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-grpc
  annotations:
    kubernetes.io/ingress.class: contour-internal
spec:
  rules:
    - host: grpc-internal.path.to.argocd.io
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
  tls:
    - hosts:
        - grpc-internal.path.to.argocd.io
      secretName: your-certificate-name
