add-ons/overlays/educates-with-argocd-ingress/argocd-server-http-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-server-http
  annotations:
    kubernetes.io/ingress.class: contour-internal
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: internal.path.to.argocd.io
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: http
  tls:
    - hosts:
        - internal.path.to.argocd.io
      secretName: your-certificate-name
